    * ADD: FileManager: button to view last status of copy/move action after action was detached to background
    * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
    * ADD: /mnt/usb{1,2}/Drive{7,8} and /mnt/usb{1,2}/NetShare mount points
    * CHANGE: FileManager: last_played.info file is now stored in /tmp instead of played dir location - no need to have write access to mounted shares for slideshow/dir playback
    * CHANGE: FileManager: separate file/dir icons from filenames in table to make better vertical allignment
    * CHANGE: FileManager: coloured (brown) non-local mount points (ie. mounted USB storage partitions, NFS/CIFS network shares)
    * CHANGE: FileManager: more user friendly metrics for measurements on copy/move progress - bytes/KB/MB/GB
    * CHANGE: move haserl from /bin to /usr/bin for better CGI portability (compatibility with LGMOD S7)
    * CHANGE: mount options for VFAT/NTFS/EXT3/EXT4 got changed to use at least 'noatime' to make less writes to USB storage and keep permissions on NTFS
    * CHANGE: automount supported by kernel but not RELEASE filesystems on USB storage devices into /mnt/usb{1,2}/Drive{5-8} dirs only to make them visible in media player
    * REMOVE: mtdinfo.sh for space reason - it's code is in info.sh already

0.5.0-beta3 [2011.12.24]:

    * FIX: boot if any of netcast_config_add_* options was disabled and NetCast config.xml is too big to parse
    * FIX: udhcpc script now sets default IP address before making requests instead of 0.0.0.0 when configuration set to DHCP but no DHCP servers around
    * FIX: FileManager link in WebUI
    * FIX: back from playback in FileManager had mixed paths
    * ADD: TFTP server service for early boot recovery (3 stages) - uploads need to be authenticated by TV serial number
    * ADD: text files and images viewer in FileManager that's usable with remote control